--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
         </div>
 
         <!-- Login Form -->
-        <form action="/process-login" method="post" class="space-y-6">
+        <form th:action="@{/login}" method="post" class="space-y-6">
             <div>
                 <label class="block text-gray-700 font-medium mb-2">
                     <i class="fas fa-user mr-2"></i>Tên đăng nhập
