--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,15 +6,17 @@
     <title>Đăng nhập - LumiScan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="static/images/logo-rm.png" type="image/x-icon">
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen flex items-center justify-center">
     <div class="bg-white shadow-2xl rounded-2xl p-8 w-full max-w-md">
         <!-- Logo/Header -->
         <div class="text-center mb-8">
             <div class="inline-flex items-center justify-center w-16 h-16 bg-indigo-600 rounded-full mb-4">
-                <i class="fas fa-utensils text-white text-2xl"></i>
+                <!-- <i class="fas fa-utensils text-white text-2xl"></i> -->
+                <img src="static/images/logo.png" alt="Logo" class="w-16 h-16">
             </div>
-            <h1 class="text-3xl font-bold text-gray-800">LumiScan</h1>
+            <h1 class="text-3xl font-bold " style="color: #275791;">LumiScan</h1>
             <p class="text-gray-600 mt-2">Hệ thống quản lý nhà hàng</p>
         </div>
 
